fixed dark mode styles

--- a/app/globals.css
+++ b/app/globals.css
@@ -64,6 +64,9 @@
       --input: 215 27.9% 16.9%;
       --ring: 216 12.2% 83.9%;
     }
+  .theme {
+        --animate-background-position-spin: background-position-spin 3000ms infinite alternate;
+    }
   }
 
   @layer base {
@@ -74,3 +77,14 @@
       @apply bg-background text-foreground;
     }
   }
+
+  @theme inline {
+  @keyframes background-position-spin {
+  0% {
+    background-position: top center;
+        }
+  100% {
+    background-position: bottom center;
+        }
+    }
+}
